# nitron

./: .gitmodules  CMakeLists.txt
src/: extract.hpp  nitron.cpp  predict.hpp  select.hpp  train.hpp
